# SumPrices

./: .gitignore  DESIGN.md  docker-compose.yml
backend/: .env.example  Cargo.toml  build.rs
backend/migrations/: 001_create_users.sql  001_extensions_and_enums.sql  002_create_receipts.sql  002_dimensions.sql  003_create_items.sql  003_receipts.sql  004_transactions.sql  005_support.sql  006_extraction_fields.sql
backend/src/: config.rs  enums.rs  errors.rs  lib.rs  main.rs
backend/src/analytics/: handlers.rs
backend/src/auth/: handlers.rs  middleware.rs  models.rs
backend/src/extraction/: hosted_vlm.rs  mock.rs  mod.rs
backend/src/receipts/: handlers.rs  mod.rs  models.rs  pipeline.rs
backend/src/storage/: s3.rs
backend/src/transactions/: handlers.rs  models.rs
backend/tests/: ingest.rs
client/: pubspec.yaml
client/lib/: app.dart  config.dart  main.dart
client/lib/models/: receipt.dart  user.dart
client/lib/providers/: auth_provider.dart  receipt_provider.dart
client/lib/screens/: analytics_screen.dart  capture_screen.dart  home_screen.dart  items_screen.dart  login_screen.dart  receipt_detail_screen.dart  register_screen.dart
client/lib/services/: api_client.dart  auth_service.dart  receipt_service.dart  transaction_service.dart
client/test/: widget_test.dart
