[package]
name = "kvitteringsapp-backend"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
    "json",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# S3
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

# HTTP client (local VLM / Ollama / vLLM)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Extraction / hashing
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# Utilities
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
